--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -80,7 +80,7 @@
                                   <%if current_user%>
 					<%=link_to "課程收藏", "javascript:void(0);",class:"page-scroll", onClick:"showCart();" %>
                                   <%else%>
-                                    <%=link_to "課程收藏", "/courses/check_login" %>
+                                    <%=link_to "課程收藏", root_path %>
                                   <%end%>
 				</li>
 				<!-- 暫時僅提供會員課程收藏功能
