Add a warning for NewGeneralCourse in simulation.html.erb. Revise some text in import.html.erb

--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -8,7 +8,13 @@
 </style>
 
 <div class="row" style="">
-	<div class="col-md-6">
+	<div class="col-xs-12">
+		<div class="alert alert-warning com-cour-error" onclick="hideGeneralCourseError()">
+		<strong>Warning!</strong> 因為學校真的很煩, 很抱歉目前識別新制通識的功能正在努力趕工中, 並且106學年度暫時無法搜尋通識的一當代五向度資料, 造成不便, 敬請見諒!
+		</div>
+	</div>
+  
+      <div class="col-md-6">
 		<div class="panel" >
 			<div class="panel-heading bg-fb">
 				<h4 class="text-center">
