--- a/app/views/scores/import.html.erb
+++ b/app/views/scores/import.html.erb
@@ -24,7 +24,7 @@
 	3.  全選 (ctrl+a) 成績內容，並複製貼至下方表單 (<%=link_to "範例", asset_path("import_course_2.jpg"), target:"blank"%>)<br></p>
 
 	<p>
-	註1：匯入前所有課程將清先空，有少部分抵免課程、免修課程、聯合大學開授課程無法匯入。<br>
+	註1：匯入前請將所有課程先清空，有少部分抵免課程、免修課程、聯合大學開授課程無法匯入。<br>
 	註2：建議使用 Chrome 或 FireFox，如用 IE 會複製到其他字元造成匯入失敗。<br>
 	</p>
 	
