Add nctuplus_developer to select user

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,6 +73,10 @@
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+        <% if nctuplus_developer %>
+          <li>
+          </li>
+        <% end %>
 				<li>
 					<%=link_to "問題回報", "https://www.facebook.com/messages/t/nctuplus",class:"page-scroll",target:"_blank" %>
 				</li>
